
Additionally when showing macros in either digraph or trigraph mode, the
correct tokens are used:

    cdecl> set digraphs
    cdecl> show QD
    %:define QD(X) %:X

** Digraph & trigraph structured binding support
Digraphs & trigraphs are now correctly supported for structured bindings.

** `--echo-commands` & config files
Commands are now also echoed for those in configuration files.

** File line number
When reading from a file via `-f`, now includes the file name and error line
number in error messages.

** Fixed multi-declaration of functions
A multi-declaration of functions with different signatures has been fixed,
e.g.:

    cdecl> explain int f(int), g(double)
    declare f as function (integer) returning integer
    declare g as function (double precision) returning integer

** Invalid conf file is now fatal
An error in a conf file is now fatal.

** New `--lineno`, `-L` option
Specifies an integer to add to all line numbers in error and warning messages
as a debugging aid.  (See the man page for details.)

** `show` non-existent glob
An error message will now be printed if a glob has no matches.


* Changes in Cdecl 17.0.1

** Fixed returning parameter packs
Functions returning parameter packs is now correctly illegal.


* Changes in Cdecl 17.0

** Abbreviated function template parameter packs
Functions with `auto` parameters (abbreviated function templates) like:

    int f( auto x )

have been supported since **cdecl** 9.6; this release adds additional support
for parameter packs like:

    int f( auto ...x )

** Added `help` option suggestions
Added suggestions to error messages for the help options `commands`, `english`,
and `options`, for example:

    cdecl> help eglish
                ^
    6: "eglish": no such command or option; did you mean "english"?

** Constrained `auto`
For abbreviated function templates, _constrained_ `auto` declarations are now
supported:

    c++decl> explain C auto x
    declare x as concept C