@@ -24,6 +24,8 @@ c++decl> const int x
 declare x as constant integer
 c++decl> const cast p into pointer to int
 const_cast<int*>(p)
+c++decl> constant cast p into pointer to int
+const_cast<int*>(p)
 c++decl> 
 c++decl> __FILE__
 __FILE__ => "example.cpp"
