@@ -8,6 +8,7 @@ set
 int x
 const int x
 const cast p into pointer to int
+constant cast p into pointer to int
 
 __FILE__
 __LINE__
